fixed the event overlapping issue; checkpoint for overtime modification; minor UI fixes
git-svn-id: https://svn.kuali.org/repos/kpme/branches/version-1-2-br@2383 6c5f4195-72ea-6250-e7e4-e498f552a5df

--- a/src/main/webapp/css/tk.css
+++ b/src/main/webapp/css/tk.css
@@ -327,7 +327,7 @@ select {
     z-index: 9999;
 }
 
-#dialog-form form {
+.dialog-form {
     font-size: .8em !important;
 }
 
@@ -710,7 +710,7 @@ select {
 }
 
 .cal .last-event {
-    margin-bottom: 20px;
+    /*margin-bottom: 20px;*/
 }
 
 .cal .event-delete {
